--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <ul>
             <li><a href="./index.html">Pagina Principal</a></li>
-            <li><a href="./paginas/video.html">Vídeo</a></li>
+            <li><a href="./paginas/video.html">Motivação</a></li>
             <li class="submenu">
               <a href="javascript:void(0)" class="drop">Info</a>
               <div class="links">
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div class="button-container">
-                    <input type="button" value="Enviar" name="enviar" onclick = "gerarMeme(this.form)">
+                    <input class="button" type="button" value="Enviar" name="enviar" onclick = "gerarMeme(this.form)">
                     <button type="reset" value="limpar">Limpar</button>
                 </div>
             </div>
@@ -104,20 +104,26 @@
     <section id="resultado">
         <h2 id="h2"></h2>
     </section>
-    <section>
-        <article>
-            <h2>
-                O que é um meme?
-            </h2>
-            <p>
-                "No contexto da internet, meme é uma mensagem quase sempre de tom jocoso ou irônico que pode ou não ser acompanhada por uma imagem ou vídeo e que é intensamente compartilhada por usuários nas mídias sociais."
-            </p>
-            <p>
-                TORRES, Ton. O fenômeno dos memes. <b>Cienc. Cult.</b>, São Paulo, v. 68, n. 3, p. 60-61, Sept. 2016.   Disponível em <a href="http://cienciaecultura.bvs.br/scielo.php?script=sci_arttext&pid=S0009-67252016000300018#:~:text=No%20contexto%20da%20internet%2C%20meme,por%20usu%C3%A1rios%20nas%20m%C3%ADdias%20sociais.">http://cienciaecultura.bvs.br/scielo.php?script=sci_arttext&pid=S0009-67252016000300018&lng=en&nrm=iso</a>. Acesso em 18 de Junho de 2022.
-            </p>
-        </article>
-    </section>
     <footer>
+        <section>
+            <article>
+                <h2>
+                    O que é um meme?
+                </h2>
+                <p>
+                    "No contexto da internet, meme é uma mensagem quase sempre de tom jocoso ou irônico que pode ou não ser acompanhada por uma imagem ou vídeo e que é intensamente compartilhada por usuários nas mídias sociais."
+                </p>
+                <p>
+                    TORRES, Ton. O fenômeno dos memes. <b>Cienc. Cult.</b>, São Paulo, v. 68, n. 3, p. 60-61, Sept. 2016.   Disponível em <a href="http://cienciaecultura.bvs.br/scielo.php?script=sci_arttext&pid=S0009-67252016000300018#:~:text=No%20contexto%20da%20internet%2C%20meme,por%20usu%C3%A1rios%20nas%20m%C3%ADdias%20sociais.">http://cienciaecultura.bvs.br/scielo.php?script=sci_arttext&pid=S0009-67252016000300018&lng=en&nrm=iso</a>. Acesso em 18 de Junho de 2022.
+                </p>
+            </article>
+            <aside>
+                <h4>Como utilizar o gerador</h4>
+                <p>
+                    O Gerador de Memes foi idealizado para ser simples e eficaz. Para criar seu próprio meme, você preenche o formulário apresentado nessa página, informa se quer que o texto inserido na imagem tenha uma borda e seleciona a imagem de sua preferência. Ao preencher o formulário, você clica no botão Enviar e pronto! Ao fazer isso, irá aparecer uma sessão "Resultado", onde irá mostrar o seu meme já pronto para uso
+                </p>
+            </aside>
+        </section>
         <address>
             <p>
                 Feito com ❤️ por <a href="mailto:carlos.miguelcampos18@gmail.com">Carlos Miguel</a> @2022
