--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -10,12 +10,11 @@
 <body>
     <header>
         <h1>Entre em contato conosco!</h1>
-        <p>Para reportar erros ou entrar em contato por algum outro motivo, preencha esse formulário</p>
     </header>
     <nav>
         <ul>
             <li><a href="../index.html">Pagina Principal</a></li>
-            <li><a href="./video.html">Vídeo</a></li>
+            <li><a href="./video.html">Motivação</a></li>
             <li class="submenu">
               <a href="javascript:void(0)" class="drop">Info</a>
               <div class="links">
@@ -25,11 +24,12 @@
           </ul>
     </nav>
     <main>
+        <p>Para reportar erros ou entrar em contato por algum outro motivo, preencha esse formulário</p>
         <form action="https://formspree.io/f/xgedbvvr" method="post">
             <div>
                 <div class="row">
                     <div class="col">
-                        <label for="nome">Nome:*</label>
+                        <label for="nome">Nome:</label>
                     </div>
                     <div class="col">
                         <input type="text" name="nome" id="nome">
