--- a/paginas/video.html
+++ b/paginas/video.html
@@ -7,11 +7,14 @@
     <title>Motivação</title>
     <link rel="stylesheet" href="../css/video.css">
 </head>
-<body>    
+<body>
+    <header>
+        <h1>Motivação</h1>
+    </header>
     <nav>
         <ul>
             <li><a href="../index.html">Pagina Principal</a></li>
-            <li><a href="./video.html">Vídeo</a></li>
+            <li><a href="./video.html">Motivação</a></li>
             <li class="submenu">
             <a href="javascript:void(0)" class="drop">Info</a>
             <div class="links">
@@ -21,10 +24,15 @@
         </ul>
     </nav>
     <main>
-        <video width="320" height="240" controls>
-            <source src="../video/Vídeo Institucional IFSP - Câmpus Boituva.mp4" type="video/mp4">
-            Seu navegador não suporta a tag Video :(
-        </video>
+        <h3>Veja um vídeo de apresentação sobre a instituição que motivou a criação desse projeto</h3>
+        <div class="video-container">
+            <div class="box">
+                <video width="620" height="540" controls>
+                    <source src="../video/Vídeo Institucional IFSP - Câmpus Boituva.mp4" type="video/mp4">
+                    Seu navegador não suporta a tag Video :(
+                </video>
+            </div>
+        </div>
       </main>
     <footer>
         <address>
