--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header>
-        <h1>Sobre o gerador</h1>
+        <h1>Sobre o projeto</h1>
     </header>
     <nav>
         <ul>
             <li><a href="../index.html">Pagina Principal</a></li>
-            <li><a href="./video.html">Vídeo</a></li>
+            <li><a href="./video.html">Motivação</a></li>
             <li class="submenu">
               <a href="javascript:void(0)" class="drop">Info</a>
               <div class="links">
@@ -23,10 +23,17 @@
               </div>
           </ul>
     </nav>
-    <section>
+    <section class="sec1">
         <article>
-            <h3>Motivação</h3>
+            <h2>Motivação</h2>
             <p>Projeto idealizado e realizado para avaliação da disciplina de Desenvolvimento Web, lecionada pela Professora Giorjety Licorini Dias, no curso "Tecnologia em Análise e Desenvolvimento de Sistemas"</p>
+        </article>
+    </section>
+    <section class="sec2">
+        <article>
+            <h2>Tecnologias e conceitos</h2>
+            <p>Para a criação desse site, foi usado o HTML5 como base. Foram utilizadas todas as principais Tags do HTML5: Header, Aside, Canvas, Video, Article, Footer, Section, Address, Figure e Figure Caption.</p>
+            <p>Para a estilização do site foi utilizado o CSS3, deixando a tela responsiva através de Media Queries, e para sua funcionalidade foi utilizado o JavaScript para a manipulação do DOM</p>
         </article>
     </section>
     <footer>
