--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -37,18 +37,18 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <label for="error">Descreva o erro:</label>
-                    </div>
-                    <div class="col">
-                        <input type="text" name="error" id="error">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
                         <label for="email">E-mail:</label>
                     </div>
                     <div class="col">
                         <input type="email" name="email" id="email">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <label for="error">Descreva o erro:</label>
+                    </div>
+                    <div class="col">
+                        <textarea name="error" id="error" cols="30" rows="10"></textarea>
                     </div>
                 </div>
                 <div class="button-container">
