--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="button-container">
                     <input class="button" type="button" value="Enviar" name="enviar" onclick = "gerarMeme(this.form)">
-                    <button type="reset" value="limpar">Limpar</button>
+                    <button type="reset" value="limpar" onclick="limparMeme()">Limpar</button>
                 </div>
             </div>
         </form>
@@ -120,7 +120,9 @@
             <aside>
                 <h4>Como utilizar o gerador</h4>
                 <p>
-                    O Gerador de Memes foi idealizado para ser simples e eficaz. Para criar seu próprio meme, você preenche o formulário apresentado nessa página, informa se quer que o texto inserido na imagem tenha uma borda e seleciona a imagem de sua preferência. Ao preencher o formulário, você clica no botão Enviar e pronto! Ao fazer isso, irá aparecer uma sessão "Resultado", onde irá mostrar o seu meme já pronto para uso
+                    O Gerador de Memes foi idealizado para ser simples e objetivo. <br> 
+                    Para criar seu próprio meme, basta preencher o formulário apresentado nessa página, informando o texto, sua cor, se deve possuir a borda preta e qual imagem será utilizada (dentre as opções disponíveis). <br> 
+                    Ao final do formulário, você clica no botão Enviar e pronto, uma sessão "Resultado" será exibida com o meme gerado!
                 </p>
             </aside>
         </section>
