--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -32,8 +32,9 @@
     <section class="sec2">
         <article>
             <h2>Tecnologias e conceitos</h2>
-            <p>Para a criação desse site, foi usado o HTML5 como base. Foram utilizadas todas as principais Tags do HTML5: Header, Aside, Canvas, Video, Article, Footer, Section, Address, Figure e Figure Caption.</p>
-            <p>Para a estilização do site foi utilizado o CSS3, deixando a tela responsiva através de Media Queries, e para sua funcionalidade foi utilizado o JavaScript para a manipulação do DOM</p>
+            <p>Para a criação desse site, foi usado o HTML5 como base. Foram utilizadas todas as principais Tags do HTML5: Header, Aside, Canvas, Video, Article, Footer, Section, Address, Figure e Figure Caption. <br>
+            Para a estilização do site foi utilizado o CSS3, deixando a tela responsiva através de Media Queries, e para sua funcionalidade foi utilizado o JavaScript para a manipulação do DOM
+            </p>
         </article>
     </section>
     <footer>
